# generated-sdk

./: README.md
python/Foxit-eSign-NO_DOCS/: README.md  pyproject.toml
python/Foxit-eSign-NO_DOCS/doc/: client.md  environment-based-client-initialization.md  proxy-settings.md
python/Foxit-eSign-NO_DOCS/examples/: accounts_api_cancel_account_class.py  accounts_api_change_licenses_class.py  accounts_api_change_plan_class.py  accounts_api_create_new_account_class.py  accounts_api_reactivate_account_class.py  authentication_api_generate_access_token_class.py  envelopes_api_cancel_envelope_class.py  envelopes_api_create_envelope_from_base_64_class.py  envelopes_api_create_envelope_from_binary_class.py  envelopes_api_create_envelope_from_url_class.py  envelopes_api_delete_envelopes_class.py  envelopes_api_download_envelope_files_class.py  envelopes_api_download_single_document_pdf_class.py  envelopes_api_get_deleted_envelope_history_class.py  envelopes_api_get_envelope_activity_history_class.py  envelopes_api_get_envelope_details_class.py  envelopes_api_get_envelope_ids_class.py  envelopes_api_modify_shared_envelope_class.py  envelopes_api_move_envelopes_to_recycle_bin_class.py  envelopes_api_regenerate_embedded_signing_session_class.py  envelopes_api_send_draft_envelope_class.py  envelopes_api_send_signature_reminder_class.py  envelopes_api_update_envelope_fields_class.py  envelopes_api_update_envelope_recipients_class.py  parties_api_create_email_group_class.py  parties_api_get_email_group_details_class.py  reports_api_download_report_class.py  templates_api_create_envelope_from_template_class.py  templates_api_create_template_from_url_class.py  templates_api_get_a_list_of_all_templates_class.py  templates_api_get_template_details_class.py  templates_api_get_templates_by_template_ids_class.py  users_api_create_user_class.py  users_api_delete_user_class.py  users_api_list_all_users_class.py  users_api_update_user_class.py  webhooks_api_create_webhook_channel_class.py  webhooks_api_deactivate_webhook_channel_class.py  webhooks_api_delete_webhook_channel_class.py  webhooks_api_get_webhook_channel_details_class.py  (+3 more)
python/Foxit-eSign-NO_DOCS/foxitesigntest/: __init__.py  api_helper.py  configuration.py  foxitesigntest_client.py
python/PayPal-MERGE_INNER_SPECS-NO_DOCS/: README.md  pyproject.toml
python/PayPal-MERGE_INNER_SPECS-NO_DOCS/examples/: orders_authorize_order_class.py  orders_capture_order_class.py  orders_confirm_order_class.py  orders_create_order_class.py  orders_create_order_tracking_class.py  orders_get_order_class.py  orders_patch_order_class.py  orders_update_order_tracking_class.py  payments_capture_authorized_payment_class.py  payments_get_authorized_payment_class.py  payments_get_captured_payment_class.py  payments_get_refund_class.py  payments_reauthorize_payment_class.py  payments_refund_captured_payment_class.py  payments_void_payment_class.py  subscriptions_activate_billing_plan_class.py  subscriptions_activate_subscription_class.py  subscriptions_cancel_subscription_class.py  subscriptions_capture_subscription_class.py  subscriptions_create_billing_plan_class.py  subscriptions_create_subscription_class.py  subscriptions_deactivate_billing_plan_class.py  subscriptions_get_billing_plan_class.py  subscriptions_get_subscription_class.py  subscriptions_list_billing_plans_class.py  subscriptions_list_subscription_transactions_class.py  subscriptions_list_subscriptions_class.py  subscriptions_patch_billing_plan_class.py  subscriptions_patch_subscription_class.py  subscriptions_revise_subscription_class.py  subscriptions_suspend_subscription_class.py  subscriptions_update_billing_plan_pricing_schemes_class.py  transaction_search_search_balances_class.py  transaction_search_search_transactions_class.py  vault_create_payment_token_class.py  vault_create_setup_token_class.py  vault_delete_payment_token_class.py  vault_get_payment_token_class.py  vault_get_setup_token_class.py  vault_list_customer_payment_tokens_class.py
python/PayPal-MERGE_INNER_SPECS-NO_DOCS/paypalserversdk/: configuration.py  paypal_serversdk_client.py
python/SHELL_Card_Management-NO_DOCS/: README.md  pyproject.toml
python/SHELL_Card_Management-NO_DOCS/doc/: client.md  environment-based-client-initialization.md  proxy-settings.md
python/SHELL_Card_Management-NO_DOCS/examples/: card_autorenew_class.py  card_card_move_class.py  card_cardcancel_class.py  card_carddetails_class.py  card_cardordercard_class.py  card_cardordercardenquiry_class.py  card_cardpinreminder_class.py  card_cardsummary_class.py  card_cardupdatestatus_class.py  card_deliveryaddressupdate_class.py  card_getkey_class.py  card_purchase_category_class.py  card_schedule_card_block_class.py  card_searchcard_class.py  card_updatemobilepaymentregistrationstatus_class.py  customer_accounts_class.py  customer_auditreport_class.py  customer_card_type_class.py  customer_cardgroups_class.py  customer_createcardgroup_class.py  customer_customer_class.py  customer_loggedinuser_class.py  customer_payers_class.py  customer_updatecardgroup_class.py  restriction_apply_restriction_class.py  restriction_bundledetails_class.py  restriction_create_bundle_class.py  restriction_delete_bundle_class.py  restriction_restriction_account_class.py  restriction_search_account_limit_class.py  restriction_search_card_restriction_class.py  restriction_summaryofbundles_class.py  restriction_update_bundle_class.py
python/SHELL_Card_Management-NO_DOCS/shellcardmanagementapis/: __init__.py  api_helper.py  configuration.py  shell_card_management_ap_is_client.py
python/SHELL_Data_And_Reporting-NO_DOCS/: README.md  pyproject.toml
python/SHELL_Data_And_Reporting-NO_DOCS/doc/: client.md  environment-based-client-initialization.md  (+1 more)
python/SHELL_Digital_Payments-NO_DOCS/: README.md  pyproject.toml
python/SHELL_ev-NO_DOCS/: README.md  pyproject.toml
python/Worldpay-PayFac Boarding API-NO_DOCS/: README.md  pyproject.toml
python/typecombinator-complex/: README.md  pyproject.toml
python/webhooks-callbacks/: README.md  pyproject.toml  test-requirements.txt
(+15443 files in other folders)
