[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "shellev"
description = "This API Product provides the list of all Shell Recharge locations. The list includes all Shell Recharge network and all locations available through our roaming partners.  Supported Functions * Get the list of all the locations and its details. * Get the details of a particular location.  * Get the list of locations nearby using the latitude and longitude.  * Get the list of locations for a given set of bounds with different zoom levels.  The Charging endpoints provides control to start, stop and get status of the charging session.  Supported Functions  * Start a charging session\\n * Stop a charging session \\n * Retrieve the status of a charging session \\n * Retrieve the list of all active sessions for a card"
version = "1.0.0"
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
requires-python = ">=3.7"
[[project.authors]]
name = "Shell Technical Support (API)"
email = "api@shell.com"

[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
