[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "payfacsubmerchantprovisioningapi"
description = "API to create and maintain PayFac submerchants   # Authentication  <SecurityDefinitions />"
version = "3.0.2"
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
requires-python = ">=3.7"
[[project.authors]]
name = "PayFac API Solutioning Group"
email = "payfacsolutioning@fisglobal.com"

[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
