[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "typecombinatorcomplex"
description = "Testing all the complex cases such as: - Scalar (inner/outer arrayOfMaps/mapofArrays) - Non-Scalar (inner/outer arrayOfMaps/mapofArrays) - Mix of Both - MultiLevel oneOf/anyOf IN following: - Model Properties (optional, required, nullable, optional-nullable) - Endpoint Params (Query, Form, Body(WrapBodyInObject (true,false)), Template)(CollectParameters(true,false)) - Endpoint's response"
version = "1.0.0"
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
requires-python = ">=3.7"
[[project.authors]]
name = "APIMatic Code Generator"
email = "support@apimatic.io"

[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
